--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,9 @@ ul  {
     text-transform: uppercase;
     text-decoration: none;
 }
+.learnsocial .buttonBox a.btn { 
+    margin: 0 auto;
+}
 .mainbanner .row {
     align-items: center;
     height: 100%;
