--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,39 @@ section.glimpsesection {
     background-position: 100% 100%;
     background-size: 101%;
 }
+.glimpsesection .videos {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.glimpsesection {
+    position: relative;
+    z-index: 1;
+}
+.glimpsesection .videos video {
+    object-fit: cover;
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.05);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+.time-box span {
+    display: inline-block;
+    animation: pulse 2s infinite;
+}
 @media(max-width: 2560px) {
     html {
         font-size: 75%;
