--- a/css/style.css
+++ b/css/style.css
@@ -429,4 +429,7 @@ section.glimpsesection {
         background-position: center;
         font-size: 2.5rem;
     }
+    .learnsocial .container .headingBox .boxinnr ul.sociallink li {
+        margin: 0 1.5rem;
+    }
 }
