--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ section.glimpsesection {
     position: absolute;
     top: 14rem;
 }
-.popupscreen {position: fixed;top: 0;left: 0;width: 100%;height: 100vh;}
+.popupscreen {position: fixed;top: 0;left: 0;width: 100%;height: 100vh;z-index: 9;}
 .popupscreen .container {
     display: flex;
     align-items: center;
