--- a/css/style.css
+++ b/css/style.css
@@ -422,12 +422,24 @@ section.glimpsesection {
     }
     .time-box label {font-size: 2rem;}
     .modalpopupinnr .modalform {
-        padding: 8rem 6rem 8rem 6rem;
+        padding: 8rem 9rem 9rem 9rem;
         background-position: center;
     }
     .sucessmsg {
         background-position: center;
         font-size: 2.5rem;
+    }
+    .modalinnr input {
+        background: #1a0f22;
+        color: #fff;
+        height: 5rem;
+        padding: 1.8rem;
+        border-radius: 8px;
+        width: 100%;
+        font-size: 2rem;
+        font-family: 'Poppins';
+        font-weight: 300;
+        margin-bottom: 1rem;
     }
     .learnsocial .container .headingBox .boxinnr ul.sociallink li {
         margin: 0 1rem;
