--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,11 @@ section.glimpsesection {
     top: 14rem;
 }
 .popupscreen {position: fixed;top: 0;left: 0;width: 100%;height: 100vh;z-index: 9;}
+.popupscreen .button.close {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+}
 .popupscreen .container {
     display: flex;
     align-items: center;
