--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ section.glimpsesection {
     position: absolute;
     top: 3rem;
     right: 3rem;
+    cursor: pointer;
 }
 .popupscreen .container {
     display: flex;
