--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ section.glimpsesection {
         text-align: center;
     }
 }
-@media screen and (min-device-width: 481px) and (max-device-width: 768px) { 
+@media screen and (min-device-width: 481px) and (max-device-width: 768px) and (orientation: landscape) { 
     html {
         font-size: 30%;
     }
