--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,9 @@ section.glimpsesection {
         text-align: center;
     }
 }
-@media screen (max-device-width: 768px) and (orientation: landscape) { 
+@media only screen and (min-device-width: 480px) 
+                   and (max-device-width: 750px) 
+                   and (orientation: landscape) {
     html {
         font-size: 30%;
     }
