--- a/css/style.css
+++ b/css/style.css
@@ -406,14 +406,14 @@ section.glimpsesection {
 }
 @media only screen and (max-width: 1020px)  and (orientation:landscape) {
     html {
-        font-size: 30%;
+        font-size: 40%;
     }
     .arrivingsoon .buttonBox a.btn.formtarget {
         margin-left: auto;
         margin-right: auto;
     }
     section.mainbanner.bgstyle {
-        height: 400px;display: none;
+        height: 400px;
     }
 }
 
