--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html, body {
     overflow-x: hidden;
 }
 body {
-    background-color: #fff;
+    background-color: #000;
     color: #747474;
     font-family: 'Poppins', sans-serif;
     margin: 0 auto !important;
