--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -333,6 +333,9 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 .bookslider {
     width: 100%; /* Ensure slider takes full width */
 }
+#bluebookpdf {
+    padding-top: 40rem;
+}
 .slick-slide {
     display: block; /* Override default display style */
     overflow: hidden; /* Prevent overflow issues */
@@ -386,6 +389,9 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     .threetechbook ul li img {
         height: 40rem;
     }
+    #bluebookpdf {
+        padding-top: 24rem;
+    }
 }
 @media(max-width: 1920px) {
     html {
@@ -400,6 +406,12 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     }
     .middlebook {
         margin-top: -10rem;
+    }
+    #bluebookpdf .slideinnr img {
+        height: 30rem;
+    }
+    .mainbanner {
+        height: 120vh;
     }
 }
 @media(max-width: 1600px ) {
