--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -218,6 +218,7 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     text-transform: uppercase;
     text-decoration: none;
     cursor: pointer;
+    font-weight: 600;
     padding-bottom: 1rem;
 }
 .mainbanner .buttonBox {
@@ -292,17 +293,17 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 .formdata {
     height: auto;
     background: #fff;
-    width: 40rem;
+    width: 44rem;
     padding: 3rem 4.75rem;
     border-radius: 2rem;
     box-shadow: 0px 0px 20px rgb(0 0 0 / 17%);
 }
 
-.formdata .input {margin-bottom: 0.5rem;}
+.formdata .input {margin-bottom: 0.8rem;}
 
 .formdata .input input, .formdata .input select {
     font-size: 1.125rem;
-    height: 3.125rem;
+    height: 3.5rem;
     width: 100%;
     background: #f1f1f1;
     padding: 1rem;
@@ -314,15 +315,19 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     padding: 1.2rem 3rem;
     margin-top: 1rem;
     border-radius: 40px;
+    font-weight: 600;
     color: #fff;
     width: auto;
     height: auto;
     cursor: pointer;
 }
 .slideinnr img {
-    height: 40rem;
+    height: 34rem;
     margin: 0 auto;
     object-fit: contain;
+}
+.bookpdf .buttonBox {
+    margin-top: 0px !important;
 }
 .bookpdf {
     margin-top: -10rem;
@@ -408,10 +413,17 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
         margin-top: -10rem;
     }
     #bluebookpdf .slideinnr img {
-        height: 30rem;
+        height: 28rem;
     }
     .mainbanner {
         height: 120vh;
+    }
+    #bluebookpdf {
+        padding-top: 17rem;
+    }
+    #bluebookpdf .bookpdfrow {
+        width: 50%;
+        margin: 0 auto;
     }
 }
 @media(max-width: 1600px ) {
