--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -224,6 +224,8 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 .mainbanner .buttonBox {
     padding-bottom: 5rem;
     margin-top: -4rem;
+    position: relative;
+    z-index: 4;
 }
 .middlebook ul {
     display: flex;
