--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -166,11 +166,12 @@ img {
     justify-content: center;
 }
 header.siteheader {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 1.688rem 0;
+    z-index: 4;
 }
 header.siteheader .logo img {
     max-width: 14rem;
