--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -340,7 +340,7 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     box-shadow: 0px 0px 20px rgb(0 0 0 / 17%);
 }
 .productslide {
-    padding-top: 5rem;
+    padding-top: 5rem;    padding-bottom: 3rem;
 }
 .productslide.columnreverse {
     padding-left: 5rem;
