--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -487,7 +487,7 @@ ul.submenu {
 
 header.siteheader .menu ul li {
     position: relative;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 ul.submenu li {
