--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -20,7 +20,7 @@ html, body {
 body {
     background-color: #000;
     color: #747474;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Jost', sans-serif;
     margin: 0 auto !important;
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.5);
 }
@@ -37,7 +37,7 @@ abbr, address, article, aside, audio, b, blockquote, body, canvas, caption, cite
     font-size: 100%;
     vertical-align: baseline;
     background: 0 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Jost', sans-serif;
 }
 ul  {
     list-style: none;
@@ -142,9 +142,9 @@ img {
 }
 .headingBox h1 {
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
     line-height: 1.2;
-    font-size: 3.42rem;
+    font-size: 5.42rem;
     font-weight: 400;
     background: linear-gradient(187deg, rgba(117,62,150,1) 0%, rgba(56,56,144,1) 100%);
     -webkit-background-clip: text; /* Required for WebKit */
@@ -162,8 +162,18 @@ img {
 .middlebook {
     margin-top: -14rem;
 }
+.bookthreeblock {
+    margin-top: -6rem;
+    width: 100%;
+}
 .mainbanner .buttonBox .btn {
-    margin: 0 auto;
+    max-width: 20rem;
+    background-image: linear-gradient(to bottom, #703d95, #37378f) !important;
+    border-radius: 50px;
+    color: #fff;
+    height: 5rem;
+    padding-top: 1rem;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 }
 .threetechbook ul {
     justify-content: center;
@@ -188,7 +198,7 @@ header.siteheader .menu {
 }
 header.siteheader .menu ul {
     display: flex;
-    padding: 1.75rem 3.5rem;
+    padding: 1rem 3.5rem;
     justify-content: space-between;
 }
 header.siteheader .menu ul li a{
@@ -268,6 +278,7 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     font-size: 1.4rem;
     color: #000;
     margin-bottom: 1rem;
+    font-weight: 500;
 }
 .productslide .buttonBox .btn {
     font-size: 1.4rem;
@@ -291,10 +302,10 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     text-align: center;
 }
 .curiouslearnsec h2 {
-    font-size: 5rem;
+    font-size: 3.2rem;
     line-height: 1.4;
     font-weight: 400;
-    color: #404040;
+    color: #411e78;
 }
 .faqsection .row {
     justify-content: center;
@@ -468,15 +479,17 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
 .formdata label.hs-form-booleancheckbox-display {
     display: flex;
 }
-
+header.siteheader .menu ul li {
+    padding: 10px 0;
+}
 .formdata label.hs-form-booleancheckbox-display input {
-    width: 30px;
-    height: 30px;
+    width: 16px;
+    height: 16px;
     margin-right: 1rem;
 }
 ul.submenu {
     position: absolute;
-    top: 20px;
+    top: 3rem;
     left: 0;
     width: 230px;
     padding: 0px !important;
@@ -540,29 +553,60 @@ header.siteheader .menu ul li:hover ul.submenu {
     cursor: pointer;
 }
 .sitefooter {
-    padding: 3.5rem 0 2rem;
+    padding: 4rem 0 2rem;
 }
 .sitefooter .row > .col-3 {
     width: calc(100% / 4);
 }
 .sitefooter .container, .containBox {
-    max-width: 90rem;margin: 0 auto !important;
+    max-width: 95rem;margin: 0 auto !important;
 }
 .copyright p {
     text-align: center;
+    font-family: 'Josefin Sans';
+    font-weight: 300;
+    font-size: 16px;
 }
 .sitefooter h6 {
-    margin-bottom: 1rem;
-    font-size: 1rem;
-    color: #000;
+    margin-bottom: 2.5rem;
+    font-size: 16px;
+    color: #37416f;
+    font-family: 'Josefin Sans';
+    font-weight: 500;
 }
-
+.popupsec {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    background: #505050;
+}
+.popupsec .popupinnr {
+    display: flex;
+    align-items: center;    padding-top: 1.5rem;height: 100%;
+}
+.popupsec .popupinnr .close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 10;
+    width: 29px;
+}
 .sitefooter ul li {
-    margin-bottom: 1rem;
-    font-size: 1rem;
+    margin-bottom: 16px;
+    font-size: 16px;
     display: block;
     text-decoration: none;
     color: #333;
+    font-family: 'Josefin Sans';
+    font-weight: 300;
+}
+.sitefooter ul li p, .sitefooter ul li p span {
+    font-family: 'Josefin Sans';
+    font-weight: 300;
+    margin-bottom: 3px;
 }
 .sitefooter ul li span {
     display: block;
@@ -573,8 +617,11 @@ header.siteheader .menu ul li:hover ul.submenu {
 }
 .copyright {
     border-top: 1px solid #1f295c;
-    margin-top: 2rem;
+    margin-top: 3rem;
     padding-top: 2rem;
+}
+.sitefooter ul li p {
+    line-height: 1.4;
 }
 /* Responsive Css */
 .bookFeature h6 {
@@ -595,7 +642,7 @@ header.siteheader .menu ul li:hover ul.submenu {
     display: flex;
     align-items: center;
     width: calc(100% / 2 - 20px );
-    font-size: 1.25rem;
+    font-size: 1.188rem;
     margin-bottom: 1.8rem;
 }
 
@@ -604,15 +651,17 @@ header.siteheader .menu ul li:hover ul.submenu {
 }
 
 .bookFeature p span {
-    padding: 0 1rem;
+    padding: 0 0rem;
     display: inline-block;
-    font-size: 1rem;
+    font-size: 10px;
+    font-weight: 500;
 }
 
 .bookFeature a.btn.formtarget.requestaquote {
-    color: #000;
+    color: #24073d;
     max-width: 15rem;
     height: 5rem;
+    padding-top: 0.5rem;
 }
 
 .productslide .image a {
@@ -628,7 +677,56 @@ header.siteheader .menu ul li:hover ul.submenu {
 }
 
 .bookFeature {
-    padding-left: 4rem;
+    padding-left: 3rem;
+}
+header.siteheader .menu ul li ul li {
+    padding: 0;
+}
+/* poweredsec */
+.poweredsec {
+    padding: 2rem 0;
+    background-image: linear-gradient(to bottom, #703d95, #37378f) !important;
+}
+.poweredsec .row .poweredtt {
+    width: 15%;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #fff;
+}
+.poweredsec .poweredbyitems ul li {
+    width: calc(100% / 3);
+}
+
+.poweredsec .poweredbyitems {
+    width: 85%;
+}
+
+.poweredsec .row {
+    align-items: center;
+}
+
+.poweredsec .poweredbyitems ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.poweredsec .poweredbyitems ul li .linnr {
+    display: flex;align-items: center;
+}
+
+.poweredsec .poweredbyitems ul li .linnr img {
+    margin-right: 1rem;
+    width: 3.5rem;
+}
+.bookpdf .buttonBox .btn {
+    margin-left: auto;
+    margin-right: auto;
+}
+.poweredsec .poweredbyitems ul li .linnr p {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #fff;
 }
 @media(max-width: 2560px) {
     .threetechbook ul li img {
@@ -646,7 +744,7 @@ header.siteheader .menu ul li:hover ul.submenu {
         font-size: 105%;
     }
     .threetechbook ul li img {
-        height: 30rem;
+        height: 35rem;
     }
     .middlebook li img {
         height: 42rem;
@@ -666,7 +764,7 @@ header.siteheader .menu ul li:hover ul.submenu {
         margin: 0 auto;
     }
     .headingBox h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 }
 @media(max-width: 1700px ) {
@@ -688,7 +786,7 @@ header.siteheader .menu ul li:hover ul.submenu {
         font-size: 70%;
     }
     .threetechbook ul li img {
-        height: 26rem;
+        height: 35rem;
     }
 }
 @media(max-width: 1024px) {
@@ -754,6 +852,16 @@ header.siteheader .menu ul li:hover ul.submenu {
     .bookFeature .buttonBox .btn {
         margin-left: auto;
         margin-right: auto;
+    }
+    .poweredsec .row .poweredtt {
+        width: 100%;
+    }
+    .poweredsec .poweredbyitems ul li {
+        width: calc(100% / 2);
+    }
+    
+    .poweredsec .poweredbyitems {
+        width: 100%;
     }
 }
 @media(max-width: 767px) {
@@ -909,5 +1017,8 @@ header.siteheader .menu ul li:hover ul.submenu {
         text-align: left;
         font-size: 14px;
         margin-bottom: 10px;
+    }
+    .poweredsec .poweredbyitems ul li {
+        width: calc(100% / 1);
     }
 }
