--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -728,6 +728,9 @@ header.siteheader .menu ul li ul li {
     font-weight: 500;
     color: #fff;
 }
+.iraredbook {
+    z-index: 1000; /* Adjust based on your layout */
+}
 @media(max-width: 2560px) {
     .threetechbook ul li img {
         height: 40rem;
