--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -647,7 +647,7 @@ header.siteheader .menu ul li:hover ul.submenu {
 }
 
 .bookFeature ul li img {
-    margin-right: 1rem;
+    margin-right: 1rem;width: 4.375rem;
 }
 
 .bookFeature p span {
@@ -731,6 +731,119 @@ header.siteheader .menu ul li ul li {
 .iraredbook {
     z-index: 1000; /* Adjust based on your layout */
 }
+.poweredsec .poweredbyitems ul li:nth-child(2) .linnr img, .poweredsec .poweredbyitems ul li:nth-child(3) .linnr img {
+    border: 1px solid #fff;
+    border-radius: 8px;
+}
+.curiouslearnsec h2 {
+    text-align: left;
+}
+
+.curiouslearnsec a.btn {
+    margin-left: 0;
+    margin-right: auto;
+    color: #391a69;
+}
+.slider {
+    max-width: 600px;
+    width: auto;
+    height: 260px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    padding: 0 25px;
+  }
+  .slider__image {
+    display: block;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    border: solid 1px #000;
+    top: 30px;
+    transition: ease-in-out 0.3s;
+    -webkit-transition: ease-in-out 0.3s;
+    -moz-transition: ease-in-out 0.3s;
+  }
+  
+  .image--1 {
+    left: 50%;
+    margin-left: -150px;
+    opacity: 1;
+    z-index: 50;
+    transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    transition: filter 0ms, transform 300ms, left 400ms ease-in-out, right 400ms ease-in;
+    -webkit-transition: filter 0ms, transform 300ms, left 400ms ease-in-out, right 400ms ease-in;
+    -moz-transition: filter 0ms, transform 300ms, left 400ms ease-in-out, right 400ms ease-in;
+  }
+  .image--2 {
+    left: 45%;
+    margin-left: -170px;
+    opacity: 0.85;
+    z-index: 40;
+    transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    transition: transform 0.4s;
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+  }
+  .image--3 {
+    left: 40%;
+    margin-left: -190px;
+    opacity: 0.6;
+    z-index: 30;
+    transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
+    -webkit-filter: blur(7px);
+    filter: blur(7px);
+    transition: ease-in-out 0.5s;
+    -webkit-transition: ease-in-out 0.5s;
+    -moz-transition: ease-in-out 0.5s;
+  }
+  .image--4 {
+    right: 40%;
+    margin-right: -190px;
+    opacity: 0.6;
+    z-index: 10;
+    transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
+    -webkit-filter: blur(7px);
+    filter: blur(7px);
+    transition: ease-in-out 0.5s;
+    -webkit-transition: ease-in-out 0.5s;
+    -moz-transition: ease-in-out 0.5s;
+  }
+  .image--5 {
+    right: 45%;
+    margin-right: -170px;
+    opacity: 0.85;
+    z-index: 20;
+    transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    transition: transform 0.4s;
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+  }
+  .slider__inner {
+    height: 100%;
+    width: 100%;
+  }
 @media(max-width: 2560px) {
     .threetechbook ul li img {
         height: 40rem;
@@ -1024,4 +1137,33 @@ header.siteheader .menu ul li ul li {
     .poweredsec .poweredbyitems ul li {
         width: calc(100% / 1);
     }
+    .slider {
+        height: 200px;
+      }
+      .slider__image {
+        width: 200px;
+        height: 135px;
+      }
+    
+      .image--2, .image--3 {
+        left: 50%;
+      }
+      .image--4, .image--5 {
+        right: 50%;
+      }
+      .image--1 {
+        margin-left: -100px;
+      }
+      .image--2 {
+        margin-left: -130px;
+      }
+      .image--3 {
+        margin-left: -160px;
+      }
+      .image--4 {
+        margin-right: -160px;
+      }
+      .image--5 {
+        margin-right: -130px;
+      }
 }
