--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -111,8 +111,10 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 50%;
     height: 100%;
+    margin: 0 auto;
+    right: 0;
 }
 .bgstyle {
     background-size: cover;
@@ -429,6 +431,7 @@ header.siteheader .menu ul li.active a, header.siteheader .menu ul li a:hover {
     background-size: cover;
     width: 3rem;
     height: 3rem;
+    z-index: 2;
 }
 .bookslider button.slick-prev {
     transform: rotate(180deg);
