--- a/postlaunch/css/style.css
+++ b/postlaunch/css/style.css
@@ -753,21 +753,24 @@ header.siteheader .menu ul li ul li {
     margin-right: auto;
     color: #391a69;
 }
+
 .slider {
-    max-width: 600px;
+    max-width: 37rem;
     width: auto;
-    height: 260px;
+    height: 37rem;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
     padding: 0 25px;
-  }
+    z-index: 1;
+}
   .slider__image {
     display: block;
-    width: 300px;
-    height: 200px;
+    object-fit: contain;
+    width: 330px;
+    height: 350px;
     position: absolute;
-    border: solid 1px #000;
+    border: none;
     top: 30px;
     transition: ease-in-out 0.3s;
     -webkit-transition: ease-in-out 0.3s;
